file(ARCHIVE_CREATE): add WORKING_DIRECTORY option

Fixes: #25260
Issue: #21653