Help/release/dev/file-archive-workdir.rst
@@ -1,0 +1,5 @@
+file-archive-workdir
+--------------------
+
+* The :command:`file(ARCHIVE_CREATE)` command gained a ``WORKING_DIRECTORY``
+  option to specify a working directory for the archiving process.
